swg for main
