# app/Http/Controllers/MainController.php
@@ -10,11 +10,36 @@ use App\Models\Bus;
 class MainController extends Controller
 {
     /**
-     * Присваивает каждому водителю поле 'travel_time' и сортирует по возрастанию этого поля, также присваивает поле 'age'
+     * @OA\Get(
+     *     path="/api/drivers/getTravelTime/{point_1}|{point_2}",
+     *     summary="Get travel time between two points for all drivers",
+     *     tags={"Travel time"},
+     *     description="Get trevel time to all drivers",
+     *     @OA\Parameter(
+     *         name="point_1",
+     *         in="path",
+     *         description="Point 1",
+     *         required=true,
+     *     ),
      *
-     * @param  string $p1
-     * @param  string $p2
+     *     @OA\Parameter(
+     *         name="point_2",
+     *         in="path",
+     *         description="Point 2",
+     *         required=true,
+     *     ),
      *
+     *     @OA\Response(
+     *         response=200,
+     *         description="successful operation",
+     *         @OA\Schema(ref="#/definitions/Driver"),
+     *
+     *     ),
+     *     @OA\Response(
+     *         response="404",
+     *         description="Driver is not found",
+     *     )
+     * )
      */
     public function getTravelTimeForAll($p1, $p2)
     {
@@ -24,8 +49,6 @@ class MainController extends Controller
 
         foreach ($drivers as $driver)
         {
-            $driver->age = $driver->getAge();
-
             $driver->travel_time = $driver->getTravelTime($distance);
         }
 
@@ -33,12 +56,44 @@ class MainController extends Controller
     }
 
     /**
-     * Присваивает водителю поле 'travel_time' и поле 'age'
+     * @OA\Get(
+     *     path="/api/drivers/{driver_id}/getTravelTime/{point_1}|{point_2}",
+     *     summary="Get travel time between two points for 1 driver",
+     *     tags={"Travel time"},
+     *     description="Get trevel time driver",
      *
-     * @param  integer $id
-     * @param  string $p1
-     * @param  string $p2
+     *     @OA\Parameter(
+     *         name="driver_id",
+     *         in="path",
+     *         description="Driver id",
+     *         required=true,
+     *     ),
      *
+     *     @OA\Parameter(
+     *         name="point_1",
+     *         in="path",
+     *         description="Point 1",
+     *         required=true,
+     *     ),
+     *
+     *     @OA\Parameter(
+     *         name="point_2",
+     *         in="path",
+     *         description="Point 2",
+     *         required=true,
+     *     ),
+     *
+     *     @OA\Response(
+     *         response=200,
+     *         description="successful operation",
+     *         @OA\Schema(ref="#/definitions/Driver"),
+     *
+     *     ),
+     *     @OA\Response(
+     *         response="404",
+     *         description="Driver is not found",
+     *     )
+     * )
      */
     public function getTravelTimeForOne($id, $p1, $p2)
     {
@@ -46,12 +101,35 @@ class MainController extends Controller
 
         $driver = Driver::find($id);
 
-        $driver->age = $driver->getAge();
-
         $driver->travel_time = $driver->getTravelTime($distance);
 
         return response()->json($driver);
     }
+
+    /**
+     * @OA\Get(
+     *     path="/api/drivers/restore/{driver_id}",
+     *     summary="Get driver by id",
+     *     tags={"Drivers"},
+     *     description="Get driver by id",
+     *     @OA\Parameter(
+     *         name="driver_id",
+     *         in="path",
+     *         description="Driver id",
+     *         required=true,
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="successful operation",
+     *         @OA\Schema(ref="#/definitions/Driver"),
+     *
+     *     ),
+     *     @OA\Response(
+     *         response="404",
+     *         description="Driver is not found",
+     *     )
+     * )
+     */
 
     public function restoreDriver($id){
 
@@ -60,6 +138,31 @@ class MainController extends Controller
 
         return $driver;
     }
+
+    /**
+     * @OA\Get(
+     *     path="/api/drivers/restore/{bus_id}",
+     *     summary="Restore bus by id",
+     *     tags={"Buses"},
+     *     description="Restore bus by id",
+     *     @OA\Parameter(
+     *         name="bus_id",
+     *         in="path",
+     *         description="Bus id",
+     *         required=true,
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="successful operation",
+     *         @OA\Schema(ref="#/definitions/Bus"),
+     *
+     *     ),
+     *     @OA\Response(
+     *         response="404",
+     *         description="Driver is not found",
+     *     )
+     * )
+     */
 
     public function restoreBus($id){
 
